--- a/theme/templates/bases/base-website.html
+++ b/theme/templates/bases/base-website.html
@@ -12,7 +12,7 @@
             </a>
           </div>
           <div class="-mr-2 -my-2 md:hidden">
-            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500" aria-expanded="false" onclick="toggleMenu('navMobile')">
+            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false" onclick="toggleMenu('navMobile')">
               <span class="sr-only">Open menu</span>
               <!-- Heroicon name: outline/menu -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -23,7 +23,7 @@
           <nav class="hidden md:flex space-x-10">
             <div class="relative">
               <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-              <button type="button" class="text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" aria-expanded="false" onclick="toggleMenu('navMenuSolutions')">
+              <button type="button" class="text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" aria-expanded="false" onclick="toggleMenu('navMenuSolutions')">
                 <span>Solutions</span>
                 <!--
                   Heroicon name: solid/chevron-down
@@ -34,22 +34,11 @@
                   <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
                 </svg>
               </button>
-  
-              <!--
-                'Solutions' flyout menu, show/hide based on flyout menu state.
-  
-                Entering: "transition ease-out duration-200"
-                  From: "opacity-0 translate-y-1"
-                  To: "opacity-100 translate-y-0"
-                Leaving: "transition ease-in duration-150"
-                  From: "opacity-100 translate-y-0"
-                  To: "opacity-0 translate-y-1"
-              -->
               <div id="navMenuSolutions" class="hidden absolute z-10 -ml-4 mt-3 transform w-screen max-w-md lg:max-w-2xl lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
                 <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                   <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                     <a href="{% url 'guest_management' %}" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white sm:h-12 sm:w-12">
                         <!-- Heroicon name: outline/user -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
@@ -66,7 +55,7 @@
                     </a>
   
                     <a href="{% url 'marketing' %}" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white sm:h-12 sm:w-12">
                         <!-- Heroicon name: outline/chat -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
@@ -83,7 +72,7 @@
                     </a>
   
                     <a href="{% url 'automated_messaging' %}" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white sm:h-12 sm:w-12">
                         <!-- Heroicon name: outline/chat-alt-2 -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
@@ -100,7 +89,7 @@
                     </a>
   
                     <a href="{% url 'booking_management' %}" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white sm:h-12 sm:w-12">
                         <!-- Heroicon name: outline/book-open -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
@@ -131,10 +120,10 @@
             </a>
           </nav>
           <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-            <a href="{{ login_url }}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
+            <a href="{% url 'account_login' %}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
               Login
             </a>
-            <a href="{% url 'pricing' %}" class="ml-8 whitespace-nowrap inline-flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-600 bg-origin-border px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white hover:from-purple-700 hover:to-blue-700">
+            <a href="{% url 'pricing' %}" class="ml-8 whitespace-nowrap inline-flex items-center justify-center bg-gradient-to-r from-indigo-500 to-indigo-600 bg-origin-border px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white hover:from-indigo-700 hover:to-indigo-700">
               Sign up
             </a>
           </div>
@@ -158,7 +147,7 @@
                   <img class="h-8 w-auto" src="https://media.istockphoto.com/vectors/triquetra-sign-icon-leaflike-celtic-symbol-trinity-or-trefoil-knot-vector-id1266868632?k=6&m=1266868632&s=612x612&w=0&h=FCknqxeD4McfNnH9HhvIv_IV0KZ4BPdMm8sGWgXUnKk=" alt="Workflow">
                 </div>
                 <div class="-mr-2">
-                  <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500" onclick="toggleMenu('navMobile')">
+                  <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" onclick="toggleMenu('navMobile')">
                     <span class="sr-only">Close menu</span>
                     <!-- Heroicon name: outline/x -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -170,7 +159,7 @@
               <div class="mt-6">
                 <nav class="grid grid-cols-1 gap-7">
                   <a href="{% url 'guest_management' %}" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white">
                       <!-- Heroicon name: outline/inbox -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
@@ -182,7 +171,7 @@
                   </a>
   
                   <a href="{% url 'marketing' %}" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white">
                       <!-- Heroicon name: outline/annotation -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
@@ -194,7 +183,7 @@
                   </a>
   
                   <a href="{% url 'automated_messaging' %}" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white">
                       <!-- Heroicon name: outline/chat-alt-2 -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
@@ -206,7 +195,7 @@
                   </a>
   
                   <a href="{% url 'booking_management' %}" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-blue-500 to-blue-600 text-white">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-gradient-to-r from-indigo-500 to-indigo-600 text-white">
                       <!-- Heroicon name: outline/question-mark-circle -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -232,12 +221,12 @@
                 </a>
               </div>
               <div class="mt-6">
-                <a href="{% url 'pricing' %}" class="w-full flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-600 bg-origin-border px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white hover:from-purple-700 hover:to-blue-700">
+                <a href="{% url 'pricing' %}" class="w-full flex items-center justify-center bg-gradient-to-r from-indigo-500 to-indigo-600 bg-origin-border px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white hover:from-indigo-700 hover:to-indigo-700">
                   Sign up
                 </a>
                 <p class="mt-6 text-center text-base font-medium text-gray-500">
                   Existing customer?
-                  <a href="{{ login_url }}" class="text-gray-900">
+                  <a href="{% url 'account_login' %}" class="text-gray-900">
                     Login
                   </a>
                 </p>
@@ -321,18 +310,6 @@
                   </a>
                 </li>
 
-                <!-- <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Documentation
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Guides
-                  </a>
-                </li> -->
-
                 <li>
                   <a href="{% url 'contact' %}" class="text-base text-gray-500 hover:text-gray-900">
                     Contact
@@ -354,23 +331,6 @@
                   </a>
                 </li>
 
-                <!-- <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Jobs
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Press
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Partners
-                  </a>
-                </li> -->
               </ul>
             </div>
             <div class="mt-12 md:mt-0">
@@ -378,11 +338,6 @@
                 Legal
               </h3>
               <ul role="list" class="mt-4 space-y-4">
-                <!-- <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Claim
-                  </a>
-                </li> -->
 
                 <li>
                   <a href="{% url 'privacy' %}" class="text-base text-gray-500 hover:text-gray-900">
@@ -406,11 +361,12 @@
           <p class="mt-4 text-base text-gray-500">
             The latest news, articles, and resources, sent to your inbox weekly.
           </p>
-          <form class="mt-4 sm:flex sm:max-w-md">
+          <form class="mt-4 sm:flex sm:max-w-md" method="POST" action="{% url 'newsletter' %}">
+            {% csrf_token %}
             <label for="email-address" class="sr-only">Email address</label>
-            <input type="email" name="email-address" id="email-address" autocomplete="email" required class="appearance-none min-w-0 w-full bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:placeholder-gray-400" placeholder="Enter your email">
+            <input type="email" name="email-address" id="email-address" autocomplete="email" required class="appearance-none min-w-0 w-full bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:placeholder-gray-400" placeholder="Enter your email">
             <div class="mt-3 rounded-md sm:mt-0 sm:ml-3 sm:flex-shrink-0">
-              <button type="submit" class="w-full flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-600 bg-origin-border px-4 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white hover:from-purple-700 hover:to-blue-700">
+              <button type="submit" class="w-full flex items-center justify-center bg-gradient-to-r from-indigo-500 to-indigo-600 bg-origin-border px-4 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white hover:from-purple-700 hover:to-indigo-700">
                 Subscribe
               </button>
             </div>
@@ -455,7 +411,7 @@
           </a>
         </div>
         <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
-          &copy; 2020 Workflow, Inc. All rights reserved.
+          &copy; 2021 RestDos, Inc. All rights reserved.
         </p>
       </div>
     </div>
