--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -46,27 +46,27 @@
           From the blog
         </h2>
         <p class="mt-3 max-w-2xl mx-auto text-xl text-gray-500 sm:mt-4">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed.
+          A selection of resources from industry leading sources that will help you improve your restaurant operations.
         </p>
       </div>
       <div class="mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none">
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
           <div class="flex-shrink-0">
-            <img class="h-48 w-full object-cover" src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80" alt="">
+            <img class="h-48 w-full object-cover" src="https://modernrestaurantmanagement.com/assets/media/2021/10/Shutterstock_1309210951-1200x655.jpg" alt="">
           </div>
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://modernrestaurantmanagement.com/how-can-i-streamline-inventory-management/" class="hover:underline">
                   Article
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://modernrestaurantmanagement.com/how-can-i-streamline-inventory-management/" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  Boost your conversion rate
+                  Streamline Inventory Management
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
+                  Chefs spend countless hours counting inventory, purchasing new ingredients, and tracking down more cost-effective substitutions for products that are either cancelled or out of stock. 
                 </p>
               </a>
             </div>
@@ -79,7 +79,7 @@
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-gray-900">
-                  <a href="#" class="hover:underline">
+                  <a href="https://modernrestaurantmanagement.com/how-can-i-streamline-inventory-management/" class="hover:underline">
                     Roel Aufderehar
                   </a>
                 </p>
@@ -106,22 +106,22 @@
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://modernrestaurantmanagement.com/taking-charge-of-an-electrifying-opportunity/" class="hover:underline">
                   Video
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://modernrestaurantmanagement.com/taking-charge-of-an-electrifying-opportunity/" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  How to use search engine optimization to drive sales
+                  Taking Charge of an Electrifying Opportunity
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis asperiores porro quaerat doloribus, eveniet dolore. Adipisci tempora aut inventore optio animi., tempore temporibus quo laudantium.
+                  EVs are coming. For restaurants, there’s an opportunity to provide a premium new service to attract and retain customers. 
                 </p>
               </a>
             </div>
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                <a href="#">
+                <a href="https://modernrestaurantmanagement.com/taking-charge-of-an-electrifying-opportunity/">
                   <span class="sr-only">Brenna Goyette</span>
                   <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                 </a>
@@ -150,34 +150,34 @@
   
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
           <div class="flex-shrink-0">
-            <img class="h-48 w-full object-cover" src="https://images.unsplash.com/photo-1492724441997-5dc865305da7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80" alt="">
+            <img class="h-48 w-full object-cover" src="https://modernrestaurantmanagement.com/assets/media/2021/04/Pho-MPH_Food-Image-1600x655.jpg" alt="">
           </div>
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://modernrestaurantmanagement.com/covid-19-case-study-pivoting-to-profit/" class="hover:underline">
                   Case Study
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://modernrestaurantmanagement.com/covid-19-case-study-pivoting-to-profit/" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  Improve your customer experience
+                  Pivoting to Profit
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint harum rerum voluptatem quo recusandae magni placeat saepe molestiae, sed excepturi cumque corporis perferendis hic.
+                  Prior to restaurant lockdowns in March 2020, the establishment received the majority of its business through dine-in customers.
                 </p>
               </a>
             </div>
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                <a href="#">
+                <a href="https://modernrestaurantmanagement.com/covid-19-case-study-pivoting-to-profit/">
                   <span class="sr-only">Daniela Metz</span>
                   <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                 </a>
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-gray-900">
-                  <a href="#" class="hover:underline">
+                  <a href="https://modernrestaurantmanagement.com/covid-19-case-study-pivoting-to-profit/" class="hover:underline">
                     Daniela Metz
                   </a>
                 </p>
@@ -200,27 +200,27 @@
       <div class="mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none">
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
           <div class="flex-shrink-0">
-            <img class="h-48 w-full object-cover" src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80" alt="">
+            <img class="h-48 w-full object-cover" src="https://modernrestaurantmanagement.com/assets/media/2021/09/Shutterstock_238367224-1200x655.jpg" alt="">
           </div>
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://modernrestaurantmanagement.com/how-restaurants-should-respond-to-bad-reviews/" class="hover:underline">
                   Article
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://modernrestaurantmanagement.com/how-restaurants-should-respond-to-bad-reviews/" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  Boost your conversion rate
+                  Responding to bad reviews
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
+                  Online reviews have a lot of influence on today's resturants. Most customers check out reviews before heading over for their first meal.
                 </p>
               </a>
             </div>
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                <a href="#">
+                <a href="https://modernrestaurantmanagement.com/how-restaurants-should-respond-to-bad-reviews/">
                   <span class="sr-only">Roel Aufderehar</span>
                   <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                 </a>
@@ -254,35 +254,35 @@
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://www.youtube.com/watch?v=uPEXG8UwgKg" class="hover:underline">
                   Video
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://www.youtube.com/watch?v=uPEXG8UwgKg" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  How to use search engine optimization to drive sales
+                  Restaurant Industry Update
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis asperiores porro quaerat doloribus, eveniet dolore. Adipisci tempora aut inventore optio animi., tempore temporibus quo laudantium.
+                  An update from the restaurant association of america for September 2021
                 </p>
               </a>
             </div>
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                <a href="#">
+                <a href="https://www.youtube.com/watch?v=uPEXG8UwgKg">
                   <span class="sr-only">Brenna Goyette</span>
                   <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                 </a>
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-gray-900">
-                  <a href="#" class="hover:underline">
+                  <a href="https://www.youtube.com/watch?v=uPEXG8UwgKg class="hover:underline">
                     Brenna Goyette
                   </a>
                 </p>
                 <div class="flex space-x-1 text-sm text-gray-500">
                   <time datetime="2020-03-10">
-                    Mar 10, 2020
+                    October 30, 2021
                   </time>
                   <span aria-hidden="true">
                     &middot;
@@ -298,34 +298,34 @@
   
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
           <div class="flex-shrink-0">
-            <img class="h-48 w-full object-cover" src="https://images.unsplash.com/photo-1492724441997-5dc865305da7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80" alt="">
+            <img class="h-48 w-full object-cover" src="https://d2w1ef2ao9g8r9.cloudfront.net/images/_1600x847_crop_center-center_82_line/header-chicana-vegana.jpeg.webp?mtime=20210917170737&focal=none&tmtime=20210917170741 1600w, https://d2w1ef2ao9g8r9.cloudfront.net/images/_992x525_crop_center-center_82_line/header-chicana-vegana.jpeg.webp?mtime=20210917170737&focal=none&tmtime=20210917170741 992w, https://d2w1ef2ao9g8r9.cloudfront.net/images/_768x406_crop_center-center_82_line/header-chicana-vegana.jpeg.webp?mtime=20210917170737&focal=none&tmtime=20210917170742 768w, https://d2w1ef2ao9g8r9.cloudfront.net/images/_576x305_crop_center-center_82_line/header-chicana-vegana.jpeg.webp?mtime=20210917170737&focal=none&tmtime=20210917170742 576w" alt="">
           </div>
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
               <p class="text-sm font-medium text-indigo-600">
-                <a href="#" class="hover:underline">
+                <a href="https://pos.toasttab.com/blog/on-the-line/chicana-vegana" class="hover:underline">
                   Case Study
                 </a>
               </p>
-              <a href="#" class="block mt-2">
+              <a href="https://pos.toasttab.com/blog/on-the-line/chicana-vegana" class="block mt-2">
                 <p class="text-xl font-semibold text-gray-900">
-                  Improve your customer experience
+                  The Evolution of Chicana Vegana
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint harum rerum voluptatem quo recusandae magni placeat saepe molestiae, sed excepturi cumque corporis perferendis hic.
+                  Chicana Vegana serves vegan versions of the Mexican-American classics that founder Jasmine Hernandez grew up on. Even through the ongoing challenges of the pandemic, Hernandez and her family are growing the business.
                 </p>
               </a>
             </div>
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                <a href="#">
+                <a href="https://pos.toasttab.com/blog/on-the-line/chicana-vegana">
                   <span class="sr-only">Daniela Metz</span>
                   <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                 </a>
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-gray-900">
-                  <a href="#" class="hover:underline">
+                  <a href="https://pos.toasttab.com/blog/on-the-line/chicana-vegana" class="hover:underline">
                     Daniela Metz
                   </a>
                 </p>
