--- a/website/templates/website/signup.html
+++ b/website/templates/website/signup.html
@@ -44,7 +44,8 @@
       </div>
 
       <div class="mt-3 text-sm text-grey-200">
-        <p class="py-4">By clicking Signup you agree to our <a class="text-blue-500 font-medium underline" href="{% url 'terms' %}">Terms & Conditions</a> for
+        <p class="py-4">By clicking Signup you agree to our <a class="text-blue-500 font-medium underline"
+            href="{% url 'terms' %}">Terms & Conditions</a> for
           the {{ signup_plan }} plan. You will be charged €{{ signup_monthly }} today and the same amount each month
           thereafter to continue your service.</p>
       </div>
@@ -63,6 +64,22 @@
   </div>
 </div>
 
+<div class="fixed z-10 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true" id="loading-overlay">
+  <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+    <!-- This element is to trick the browser into centering the modal contents. -->
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+    <div class="inline-block px-4 pt-5 pb-4 overflow-hidden transform transition-all sm:my-8 align-middle sm:max-w-sm sm:w-full sm:p-6">
+      <div>
+        <div>
+          <div style="border-top-color:transparent"
+              class="mx-auto w-32 h-32 border-4 border-blue-400 border-solid rounded-full animate-spin"></div>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block postloadjs %}
@@ -71,12 +88,12 @@
 {{ client_secret|json_script:"id_client_secret" }}
 
 <script>
-  
+
   var stripePublicKey = document.getElementById('id_stripe_public_key').innerHTML.slice(1, -1);
   var clientSecret = document.getElementById('id_client_secret').innerHTML.slice(1, -1);
   var stripe = Stripe(stripePublicKey);
   var elements = stripe.elements();
-  var card = elements.create('card', { });
+  var card = elements.create('card', {});
   card.mount('#card-element');
 
   // ERROR CHECKING STRIPE
@@ -84,10 +101,10 @@
     var errorDiv = document.getElementById('card-errors');
     if (event.error) {
       var html = `
-        <span class="icon" role="alert">
-            <i class="fas fa-times"></i>
-        </span>
-        <span>${even.error.message}</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+        </svg>
+        <span class="mt-2 text-sm text-red-500">${even.error.message}</span>
         `;
       errorDiv.innherHTML = html;
     } else {
@@ -101,9 +118,9 @@
 
   form.addEventListener('submit', function (ev) {
     ev.preventDefault();
-    console.log('button pressed');
     card.update({ 'disabled': true });
     document.getElementById('submit-button').disabled = true;
+    document.getElementById('loading-overlay').classList.remove('hidden');
     stripe.confirmCardPayment(clientSecret, {
       payment_method: {
         card: card,
@@ -112,15 +129,15 @@
       if (result.error) {
         var errorDiv = document.getElementById('card-errors');
         var html = `
-          <span class="icon" role="alert">
-              <i class="fas fa-times">error</i>
-          </span>
-          <span>${result.error.message}</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+        </svg>
+          <span class="mt-2 text-sm text-red-500">${result.error.message}</span>
         `;
         errorDiv.innerHTML = html;
+        document.getElementById('loading-overlay').classList.add('hidden');
         card.update({ 'disabled': false });
         document.getElementById('submit-button').disabled = false;
-        console.log(result.error.message);
       } else {
         if (result.paymentIntent.status === 'succeeded') {
           form.submit();
